--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,11 @@ license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
 ]
-dynamic = ["version"]
-
+version = "2025.03.27"
+dependencies = [
+    'numpy',
+    'soundcard'
+]
 [tool.setuptools.packages.find]
 exclude = ["build", "tests"]
 
